feat: Add AWS Bedrock dependencies for integration
- Add boto3>=1.35.0 and langchain-aws>=0.3.0 to requirements.txt
- Verify package compatibility with existing codebase
- Complete task 1: Set up dependencies and project structure

--- a/mcp_config.json
+++ b/mcp_config.json
@@ -1,4 +1,11 @@
 {
+  "get_current_time": {
+    "command": "python",
+    "args": [
+      "./mcp_servers/time.py"
+    ],
+    "transport": "stdio"
+  },
   "fitness_calculator": {
     "command": "python",
     "args": [
