--- a/mcp_config.json
+++ b/mcp_config.json
@@ -12,5 +12,17 @@
       "./mcp_servers/fitness.py"
     ],
     "transport": "stdio"
+  },
+  "desktop-commander": {
+    "command": "npx",
+    "args": [
+      "-y",
+      "@smithery/cli@latest",
+      "run",
+      "@wonderwhy-er/desktop-commander",
+      "--key",
+      "8f1bc671-fe10-43cd-8da1-b76a057f3c0a"
+    ],
+    "transport": "stdio"
   }
 }
