--- a/mcp_config.json
+++ b/mcp_config.json
@@ -5,5 +5,27 @@
       "./mcp_servers/time.py"
     ],
     "transport": "stdio"
+  },
+  "playwright-mcp": {
+    "command": "npx",
+    "args": [
+      "-y",
+      "@smithery/cli@latest",
+      "run",
+      "@microsoft/playwright-mcp",
+      "--key",
+      "8f1bc671-fe10-43cd-8da1-b76a057f3c0a"
+    ],
+    "transport": "stdio"
+  },
+  "freecad": {
+    "command": "uv",
+    "args": [
+      "--directory",
+      "/Users/glen/Library/Application Support/FreeCAD/freecad-mcp",
+      "run",
+      "freecad-mcp"
+    ],
+    "transport": "stdio"
   }
 }
