:feat: OpenWeatherMap 날씨 서버로 교체
- 기상청 API → OpenWeatherMap API 전환 (안정성 개선)
- 간단한 API 호출 방식 (도시명 직접 조회)
- 현재 날씨 및 5일 예보 기능
- 전세계 도시 지원, 한국어 응답

--- a/mcp_config.json
+++ b/mcp_config.json
@@ -6,6 +6,13 @@
     ],
     "transport": "stdio"
   },
+  "weather": {
+    "command": "python",
+    "args": [
+      "./mcp_servers/weather.py"
+    ],
+    "transport": "stdio"
+  },
   "playwright-mcp": {
     "command": "npx",
     "args": [
@@ -15,16 +22,6 @@
       "@microsoft/playwright-mcp",
       "--key",
       "8f1bc671-fe10-43cd-8da1-b76a057f3c0a"
-    ],
-    "transport": "stdio"
-  },
-  "freecad": {
-    "command": "uv",
-    "args": [
-      "--directory",
-      "/Users/glen/Library/Application Support/FreeCAD/freecad-mcp",
-      "run",
-      "freecad-mcp"
     ],
     "transport": "stdio"
   }
